Fix Java 8 compatibility issues