@@ -24,31 +24,7 @@ import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-
-import com.importservice.dto.ImportResponseDto;
-import com.importservice.entity.Correspondence;
-import com.importservice.entity.CorrespondenceAttachment;
-import com.importservice.entity.IncomingCorrespondenceMigration;
-import com.importservice.repository.CorrespondenceAttachmentRepository;
-import com.importservice.repository.CorrespondenceRepository;
-import com.importservice.repository.IncomingCorrespondenceMigrationRepository;
-import com.importservice.util.AttachmentUtils;
-import com.importservice.util.CorrespondenceUtils;
-import com.importservice.util.DepartmentUtils;
-import com.importservice.util.AgencyMappingUtils;
-import com.importservice.util.HijriDateUtils;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
-
-import java.util.Map;
-import java.util.HashMap;
-import java.time.LocalDateTime;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Optional;
+import java.util.Collections;
 
 @Service
 public class IncomingCorrespondenceMigrationService {
@@ -138,7 +114,7 @@ public class IncomingCorrespondenceMigrationService {
         } catch (Exception e) {
             logger.error("Failed to execute Prepare Data phase", e);
             return new ImportResponseDto("ERROR", "Failed to execute Prepare Data phase: " + e.getMessage(), 
-                0, 0, 0, List.of("Failed to execute Prepare Data phase: " + e.getMessage()));
+                0, 0, 0, Collections.singletonList("Failed to execute Prepare Data phase: " + e.getMessage()));
         }
     }
     
@@ -202,7 +178,7 @@ public class IncomingCorrespondenceMigrationService {
         } catch (Exception e) {
             logger.error("Failed to execute Creation phase", e);
             return new ImportResponseDto("ERROR", "Failed to execute Creation phase: " + e.getMessage(), 
-                0, 0, 0, List.of("Failed to execute Creation phase: " + e.getMessage()));
+                0, 0, 0, Collections.singletonList("Failed to execute Creation phase: " + e.getMessage()));
         }
     }
     
